--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
 
   <div class="btn-div">
-    <a class="btn" href="">Explore</a>
+    <a class="btn" href="destination.html">Explore</a>
   </div>
 
   <script src="index.js"></script>
